--- a/rehearsal-recorder.html
+++ b/rehearsal-recorder.html
@@ -42,7 +42,7 @@
 </head>
 <body>
   <h1>🎬 Rehearsal Recorder</h1>
-  <p>This captures your mirrored webcam, microphone, and system audio.<br>Go fullscreen before recording!</p>
+  <p>This captures your mirrored webcam, microphone, and system audio.<br>Recording starts after countdown and fullscreen begins.</p>
 
   <div id="countdown"></div>
   <canvas id="webcamCanvas" width="1920" height="1080"></canvas>
@@ -59,153 +59,4 @@
 
   <script>
     const canvas = document.getElementById("webcamCanvas");
-    const ctx = canvas.getContext("2d");
-    const fullscreenBtn = document.getElementById("fullscreenBtn");
-    const startBtn = document.getElementById("startRecording");
-    const stopBtn = document.getElementById("stopRecording");
-    const countdown = document.getElementById("countdown");
-    const filenameInput = document.getElementById("filename");
-    const downloadBtn = document.getElementById("downloadBtn");
-    const playback = document.getElementById("playback");
-
-    let mediaRecorder;
-    let recordedChunks = [];
-    let videoStream;
-    let animationFrameId;
-
-    function getFormattedDate() {
-      const d = new Date();
-      return `${String(d.getFullYear()).slice(2)}-${String(d.getMonth() + 1).padStart(2, '0')}-${String(d.getDate()).padStart(2, '0')}`;
-    }
-
-    async function setupWebcam() {
-      videoStream = await navigator.mediaDevices.getUserMedia({
-        video: {
-          width: { ideal: 3840 },
-          height: { ideal: 2160 },
-          aspectRatio: 16 / 9
-        },
-        audio: false
-      });
-
-      const videoEl = document.createElement("video");
-      videoEl.srcObject = videoStream;
-      videoEl.play();
-
-      function drawFrame() {
-        ctx.save();
-        ctx.scale(-1, 1); // flip horizontally
-        ctx.drawImage(videoEl, -canvas.width, 0, canvas.width, canvas.height);
-        ctx.restore();
-        animationFrameId = requestAnimationFrame(drawFrame);
-      }
-      drawFrame();
-    }
-
-    fullscreenBtn.onclick = () => {
-      if (canvas.requestFullscreen) canvas.requestFullscreen();
-      else if (canvas.webkitRequestFullscreen) canvas.webkitRequestFullscreen();
-    };
-
-    startBtn.onclick = async () => {
-      countdown.textContent = "3";
-      if (canvas.requestFullscreen) {
-            canvas.requestFullscreen();
-          } else if (canvas.webkitRequestFullscreen) {
-            canvas.webkitRequestFullscreen();
-          } else if (canvas.mozRequestFullScreen) {
-            canvas.mozRequestFullScreen();
-          } else if (canvas.msRequestFullscreen) {
-            canvas.msRequestFullscreen();
-          }
-      let count = 3;
-      const interval = setInterval(() => {
-        count--;
-        countdown.textContent = count > 0 ? count : "";
-        if (count <= 0) {
-          clearInterval(interval);
-          startScreenRecording();
-        }
-      }, 1000);
-    };
-
-    async function startScreenRecording() {
-      const screenStream = await navigator.mediaDevices.getDisplayMedia({
-        video: true,
-        audio: true
-      });
-
-      const micStream = await navigator.mediaDevices.getUserMedia({
-        audio: {
-          echoCancellation: false,
-          noiseSuppression: false,
-          autoGainControl: false
-        }
-      });
-
-    const audioCtx = new AudioContext();
-const destination = audioCtx.createMediaStreamDestination();
-
-const micStream = await navigator.mediaDevices.getUserMedia({
-  audio: {
-    echoCancellation: false,
-    noiseSuppression: false,
-    autoGainControl: false
-  }
-});
-
-const micSource = audioCtx.createMediaStreamSource(micStream);
-micSource.connect(destination);
-
-// Attempt to get system audio + screen
-const screenStream = await navigator.mediaDevices.getDisplayMedia({
-  video: true,
-  audio: true // system audio
-});
-
-const systemAudioTrack = screenStream.getAudioTracks()[0];
-if (systemAudioTrack) {
-  const sysSource = audioCtx.createMediaStreamSource(new MediaStream([systemAudioTrack]));
-  sysSource.connect(destination);
-}
-
-// Combine screen video + mixed audio
-const finalStream = new MediaStream([
-  ...screenStream.getVideoTracks(),
-  ...destination.stream.getAudioTracks()
-]);
-      
-      recordedChunks = [];
-      mediaRecorder = new MediaRecorder(combinedStream);
-      mediaRecorder.ondataavailable = e => {
-        if (e.data.size > 0) recordedChunks.push(e.data);
-      };
-      mediaRecorder.onstop = () => {
-        const blob = new Blob(recordedChunks, { type: "video/webm" });
-        const url = URL.createObjectURL(blob);
-        playback.src = url;
-        downloadBtn.onclick = () => {
-          const name = filenameInput.value.trim() || `Rehearsal_${getFormattedDate()}`;
-          const a = document.createElement("a");
-          a.href = url;
-          a.download = name + ".webm";
-          a.click();
-        };
-      };
-
-      mediaRecorder.start();
-      startBtn.disabled = true;
-      stopBtn.disabled = false;
-    }
-
-    stopBtn.onclick = () => {
-      mediaRecorder.stop();
-      startBtn.disabled = false;
-      stopBtn.disabled = true;
-      cancelAnimationFrame(animationFrameId);
-    };
-
-    setupWebcam();
-  </script>
-</body>
-</html>
+    const ctx = canva
